# routes/create.go
@@ -1,29 +1,33 @@
 package routes
 
-import "github.com/gofiber/fiber/v2"
+import (
+	"encoding/json"
+	"github.com/gofiber/fiber/v2"
+	"github.com/google/uuid"
+	"log"
+	"todo-app/db"
+)
 
-// TodoCreate godoc
-// @Description Create a new TODO item with a title and set status to pending
-// @Tags todos
-// @Accept json
-// @Produce json
-// @Param todo body Todo true "Todo object"
-// @Success 201 {object} Todo
-// @Failure 400 {object} map[string]interface{}
-// @Router /todos [post]
 func TodoCreate(app *fiber.App) {
-
 	app.Post("/todos", func(c *fiber.Ctx) error {
-		var newTodo Todo
-		if err := c.BodyParser(&newTodo); err != nil {
-			return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": "cannot parse JSON"})
+		log.Println("Request Body:", string(c.Body()))
+		var todo Todo
+
+		if err := c.BodyParser(&todo); err != nil {
+			return c.Status(400).SendString("Invalid request body")
 		}
 
-		newTodo.ID = idCounter
-		idCounter++
-		newTodo.Status = "pending"
+		todo.ID = uuid.New().String()
 
-		todos = append(todos, newTodo)
-		return c.Status(fiber.StatusCreated).JSON(newTodo)
+		todoJSON, err := json.Marshal(todo)
+		if err != nil {
+			return c.Status(500).SendString("Failed to process todo")
+		}
+
+		if err := db.Set("todo:"+todo.ID, string(todoJSON)); err != nil {
+			return c.Status(500).SendString("Failed to save todo")
+		}
+
+		return c.Status(201).JSON(todo)
 	})
 }
