# routes/helpers.go
@@ -1,10 +1,7 @@
 package routes
 
 type Todo struct {
-	ID     int    `json:"id"`
-	Title  string `json:"title"`
-	Status string `json:"status"`
+	ID     string `json:"id"`
+	Task   string `json:"task"`
+	Status bool   `json:"status"`
 }
-
-var todos = []Todo{} // Slices as test database for now. Will replace with redis or other db
-var idCounter = 1
